entity belonging e belongingPK, services e controllers